# grpc-rdma

./: .gitignore  BUILD  BUILD.gn  CMakeLists.txt  Makefile  README.md  WORKSPACE  build_autogenerated.yaml  config.m4
examples/cpp/micro-bench/: CMakeLists.txt  FindHdrHistogram.cmake  interarrival.h  mb_client.cc  mb_server.cc
examples/cpp/micro-bench/draw/: comm_settings.py  draw_bandwidth.py  draw_bp_timeout.py  draw_latency.py  draw_polling_thread.py  draw_resources.py  draw_throughput.py
examples/cpp/micro-bench/draw/phoenix/rpc_bench_latency/rpc_bench_latency_1024b/: rpc_bench_client_10.22.81.19_1.stderr  rpc_bench_client_10.22.81.19_1.stdout  rpc_bench_server_10.22.81.20_0.stderr  rpc_bench_server_10.22.81.20_0.stdout
examples/cpp/micro-bench/draw/phoenix/rpc_bench_latency/rpc_bench_latency_128b/: rpc_bench_client_10.22.81.19_1.stderr  rpc_bench_client_10.22.81.19_1.stdout
examples/cpp/micro-bench/draw/phoenix/rpc_bench_latency/rpc_bench_latency_256b/: rpc_bench_client_10.22.81.19_1.stderr  rpc_bench_client_10.22.81.19_1.stdout
examples/cpp/micro-bench/draw/phoenix/rpc_bench_latency/rpc_bench_latency_512b/: rpc_bench_client_10.22.81.19_1.stderr  rpc_bench_client_10.22.81.19_1.stdout  rpc_bench_server_10.22.81.20_0.stderr
examples/cpp/micro-bench/draw/phoenix/rpc_bench_latency/rpc_bench_latency_64b/: rpc_bench_client_10.22.81.19_1.stderr  rpc_bench_client_10.22.81.19_1.stdout
examples/cpp/micro-bench/draw/phoenix/rpc_bench_rate/rpc_bench_rate_32b_128c/: mpstat_client.out  mpstat_server.out  rpc_bench_client_10.22.81.10.stderr  rpc_bench_client_10.22.81.10.stdout  rpc_bench_client_10.22.81.11.stderr  rpc_bench_client_10.22.81.11.stdout  rpc_bench_client_10.22.81.12.stderr  rpc_bench_client_10.22.81.12.stdout  rpc_bench_client_10.22.81.16.stderr  rpc_bench_client_10.22.81.16.stdout  rpc_bench_client_10.22.81.5.stderr  rpc_bench_client_10.22.81.5.stdout  rpc_bench_client_10.22.81.6.stderr  rpc_bench_client_10.22.81.6.stdout  rpc_bench_client_10.22.81.7.stderr  rpc_bench_client_10.22.81.7.stdout  rpc_bench_client_10.22.81.9.stderr  rpc_bench_client_10.22.81.9.stdout  rpc_bench_server_10.22.81.8.stderr  rpc_bench_server_10.22.81.8.stdout
examples/cpp/micro-bench/draw/phoenix/rpc_bench_rate/rpc_bench_rate_32b_16c/: mpstat_client.out  mpstat_server.out  rpc_bench_client_10.22.81.10.stderr  rpc_bench_client_10.22.81.10.stdout  rpc_bench_client_10.22.81.11.stderr  rpc_bench_client_10.22.81.11.stdout  rpc_bench_client_10.22.81.12.stderr  rpc_bench_client_10.22.81.12.stdout  rpc_bench_client_10.22.81.16.stderr  rpc_bench_client_10.22.81.16.stdout  rpc_bench_client_10.22.81.5.stderr  rpc_bench_client_10.22.81.5.stdout  rpc_bench_client_10.22.81.6.stderr  rpc_bench_client_10.22.81.6.stdout  rpc_bench_client_10.22.81.7.stderr  rpc_bench_client_10.22.81.7.stdout  rpc_bench_client_10.22.81.9.stderr  rpc_bench_client_10.22.81.9.stdout  rpc_bench_server_10.22.81.8.stderr  rpc_bench_server_10.22.81.8.stdout
examples/cpp/micro-bench/draw/phoenix/rpc_bench_rate/rpc_bench_rate_32b_1c/: mpstat_client.out  mpstat_server.out  rpc_bench_client_10.22.81.27.stderr  rpc_bench_client_10.22.81.27.stdout  rpc_bench_server_10.22.81.28.stderr
examples/cpp/micro-bench/draw/phoenix/rpc_bench_rate/rpc_bench_rate_32b_2c/: mpstat_client.out  mpstat_server.out  rpc_bench_client_10.22.81.26.stderr  rpc_bench_client_10.22.81.26.stdout  rpc_bench_client_10.22.81.27.stdout  rpc_bench_server_10.22.81.28.stderr  rpc_bench_server_10.22.81.28.stdout
examples/cpp/micro-bench/draw/phoenix/rpc_bench_rate/rpc_bench_rate_32b_32c/: mpstat_client.out  mpstat_server.out  rpc_bench_client_10.22.81.10.stderr  rpc_bench_client_10.22.81.10.stdout  rpc_bench_client_10.22.81.11.stderr  rpc_bench_client_10.22.81.11.stdout  rpc_bench_client_10.22.81.12.stderr  rpc_bench_client_10.22.81.12.stdout  rpc_bench_client_10.22.81.16.stderr  rpc_bench_client_10.22.81.16.stdout  rpc_bench_client_10.22.81.5.stderr  rpc_bench_client_10.22.81.5.stdout  rpc_bench_client_10.22.81.6.stderr  rpc_bench_client_10.22.81.6.stdout  rpc_bench_client_10.22.81.7.stderr  rpc_bench_client_10.22.81.7.stdout  rpc_bench_client_10.22.81.9.stderr  rpc_bench_client_10.22.81.9.stdout  rpc_bench_server_10.22.81.8.stderr  rpc_bench_server_10.22.81.8.stdout
examples/cpp/micro-bench/draw/phoenix/rpc_bench_rate/rpc_bench_rate_32b_4c/: mpstat_client.out  mpstat_server.out  rpc_bench_client_10.22.81.25.stderr  (+9 more)
examples/cpp/micro-bench/draw/th-pitzer-40-threads/: client_adhoc_RDMA_BPEV_tput_cli_1_numa_false.log.tmp  client_adhoc_RDMA_BPEV_tput_cli_300_numa_false.log.tmp  client_adhoc_RDMA_BPEV_tput_cli_400_numa_false.log.tmp  client_adhoc_RDMA_BPEV_tput_cli_64_numa_false.log.tmp
examples/cpp/micro-bench/draw/th-pitzer-64-threads-no-coalesce/: client_TCP_tput_cli_1_numa_false_concurrent_1_streaming_true.log.tmp
examples/cpp/micro-bench/launcher/: helper.sh  hosts  parse_squeue.py  run-all.sh  run.sh
examples/cpp/microbenchmark/: CMakeLists.txt  README.md  Utils.h  comm_spec.h  epoll_bench.cc  flags.cc  flags.h  grab_cpu.cc  mb.cc  mb.h  mb_client.h  mb_server.h  proc_parser.h  test.sh  testhosts
examples/cpp/microbenchmark/benchmark/: hosts  run-all.sh  run.sh
examples/cpp/rdma_microbenchmark/: CMakeLists.txt  README.md  SockUtils.h  mb_client.h  mb_server.h  test.sh  testhosts
examples/cpp/rdma_microbenchmark/benchmark/: run-all.sh
(+482 files in other folders)
